missing word inserted

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Do not think computers are books. When type texts like you write them you are behind the time. 
+Do not think computers are books. When you type texts like you write them you are behind the time. 
 Computers need another representation to be efficient. 
 Use the language you speak, but also format it with tabulation.
 So that the text can be transforemed into a graph.
